# computervision_forklift

./: .env.example  .gitignore  ENV_SETUP.md  LICENSE  PROBLEM_MAP.md  PROJECT_PLAN.md  QUICKSTART_ENV.md  README.md  pyproject.toml  requirements.txt
config/: inference.yaml  rules.yaml
config/cameras/: camera_001.yaml
data/annotations/: README.md
data/outputs/: README.md
data/outputs/pallet_tracking/: source_20260118_183011_detections.csv  source_20260118_183011_results.json  source_20260118_183011_summary.txt
data/outputs/reports/: source_20260118_155809.json  (+132 more)
data/sample_videos/: README.md
docs/: architecture.md  pallet_tracking_guide.md
models/: README.md
notebooks/: exploration.ipynb
pipelines/: __init__.py  batch_processor.py  roboflow_batch_processor.py
scripts/: process_video.py  process_video_roboflow.py  process_video_roboflow_integrated.py  test_roboflow_setup.py  track_pallets_roboflow.py  train_models.py
src/: __init__.py
src/analytics/: __init__.py  activity_segmenter.py  metrics.py  reporter.py
src/core/: __init__.py  entities.py  env_config.py  utils.py
src/detection/: __init__.py  detector.py  roboflow_detector.py
src/motion/: __init__.py  motion_estimator.py
src/spatial/: __init__.py  pallet_detector.py
src/state/: __init__.py  classifier.py  rules.py
src/tracking/: __init__.py  tracker.py
src/video/: __init__.py  reader.py
src/visualization/: __init__.py  visualizer.py
tests/: conftest.py  test_detector.py  test_integration.py  test_spatial.py  test_state_classifier.py  test_tracker.py  test_video_reader.py
(+5 files in other folders)
